[package]
name = "rdx-graphite"
version = "0.1.0"
edition = "2024"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "The Rustadex Graphite Package. This crate is currently under active development and is not yet functional."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustadex/graphite"
readme = "README.md"
keywords = ["rdx", "rustadex", "graph", "hyper", "void"]
categories = ["command-line-interface"]

[lib]
name = "graphite"
path = "src/lib.rs"

[dependencies]
stderr = { package = "rdx-stderr", version = "0.5" }
